<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/toolabar_color"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp"
        >
       <ImageView
           android:layout_width="40dp"
           android:layout_height="40dp"
           android:src="@mipmap/last"
           android:id="@+id/out_local"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/head_local"
            android:textColor="#fff"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#fff"
            android:id="@+id/allChoose"
            android:text="@string/defaultSelectMode" />
    </LinearLayout>
    <!--头部-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/show_music">
        </ListView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:id="@+id/show_local"
            >
            <Button
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/edittext"
                android:text="@string/StartSearching"
                android:textColor="#000"
                android:id="@+id/begin_search"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/SearchingMusic"
                android:id="@+id/searching"
                android:visibility="gone"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#8b8989"
                android:id="@+id/what_path"
                android:layout_marginTop="10dp"
                android:text="@string/DefaultPath"
                android:visibility="gone"
                />
        </LinearLayout>
    </RelativeLayout>
    <!--中间部分-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/toolabar_color"
        android:textColor="#fff"
        android:id="@+id/sure_list"
        android:text="@string/Sure"/>
</LinearLayout>
